--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Udemy Affiliate & Course Importer Demo – MasterStudy</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,13 +13,52 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+<section id="become-section">
+    <div class="become-sec">
+<div class="container">
+<div class="become-main">
+    <div class="instuctur-sec">
+        <div class="instucture-main">
+            <div class="instucture-image">
+                <img src="images/instructure.png" alt="">
+            </div>
 
+            <div class="instucture-content">
+                <h3>Become an Instructor</h3>
+
+                <p>Teach what you love. Masterstudy gives you the tools to create a course.</p>
+
+                <a href="#">Start teaching</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="instuctur-sec">
+        <div class="instucture-main">
+            <div class="instucture-image">
+                <img src="images/business-img.png" alt="">
+            </div>
+
+            <div class="instucture-content">
+                <h3>Access For Business</h3>
+
+                <p>Get unlimited access to 2,500 of top courses for your team.</p>
+
+                <a href="#">Doing Business</a>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+    </div>
+</section>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
