--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -20,71 +20,14 @@
 </head>
 
 <body>
-<section id="become-section">
-    <div class="become-sec">
-<div class="container">
-<div class="become-main">
-    <div class="instuctur-sec">
-        <div class="instucture-main">
-            <div class="instucture-image">
-                <img src="images/instructure.png" alt="">
-            </div>
 
-<<<<<<< HEAD
-    <div class="banner-sec">
-   <div class="banner-slider">
-    <div class="banner">
-        <div class="banner-img">
-            <img src="images/slide-1.jpg" alt="">
-        </div>
-        <div class="banner-text">
-            <h1>Udemy Affiliate Sales</h1>
-            <p>Monetize your audience and attract new customers with Udemy!</p>
-        </div>
-     </div> 
-     <div class="banner-second">
-        <div class="banner-img">
-            <img src="images/valentine.jpg" alt="">
-        </div>
-        <div class="banner-text">
-            <h1>Become Udemy Affiliate</h1>
-            <p>Import Udemy courses to your website and earn commission on every sale!</p>
-        </div>
-     </div>  
-   </div>   
+    <div class="header">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus eius culpa laudantium, aliquid adipisci ducimus obcaecati cum quia molestias ipsa laborum voluptas sint consectetur, consequatur perferendis architecto recusandae et officia repellendus maiores expedita! Cupiditate, ea ex, iure quam obcaecati cum nisi ut, deserunt recusandae fugiat accusamus voluptas eaque consectetur expedita.
     </div>
 
-=======
-            <div class="instucture-content">
-                <h3>Become an Instructor</h3>
 
-                <p>Teach what you love. Masterstudy gives you the tools to create a course.</p>
 
-                <a href="#">Start teaching</a>
-            </div>
-        </div>
-    </div>
 
-    <div class="instuctur-sec">
-        <div class="instucture-main">
-            <div class="instucture-image">
-                <img src="images/business-img.png" alt="">
-            </div>
-
-            <div class="instucture-content">
-                <h3>Access For Business</h3>
-
-                <p>Get unlimited access to 2,500 of top courses for your team.</p>
-
-                <a href="#">Doing Business</a>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-    </div>
-</section>
->>>>>>> 8aa0ad6958068cbb516c73042f05f85791d2e774
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
