--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -21,11 +21,30 @@
 
 <body>
 
+    <div class="header">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus eius culpa laudantium, aliquid adipisci ducimus obcaecati cum quia molestias ipsa laborum voluptas sint consectetur, consequatur perferendis architecto recusandae et officia repellendus maiores expedita! Cupiditate, ea ex, iure quam obcaecati cum nisi ut, deserunt recusandae fugiat accusamus voluptas eaque consectetur expedita.
+    </div>
+
             <div class="instucture-content">
                 <h3>Become an Instructor</h3>
 
 
 
+    <div class="instuctur-sec">
+        <div class="instucture-main">
+            <div class="instucture-image">
+                <img src="images/business-img.png" alt="">
+            </div>
+
+            <div class="instucture-content">
+                <h3>Access For Business</h3>
+
+                <p>Get unlimited access to 2,500 of top courses for your team.</p>
+
+                <a href="#">Doing Business</a>
+            </div>
+        </div>
+    </div>
     <div class="instuctur-sec">
         <div class="instucture-main">
             <div class="instucture-image">
