add one more box

--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -45,6 +45,24 @@
             </div>
         </div>
     </div>
+
+    
+    <div class="instuctur-sec">
+        <div class="instucture-main">
+            <div class="instucture-image">
+                <img src="images/business-img.png" alt="">
+            </div>
+
+            <div class="instucture-content">
+                <h3>Access For Business</h3>
+
+                <p>Get unlimited access to 2,500 of top courses for your team.</p>
+
+                <a href="#">Doing Business</a>
+            </div>
+        </div>
+    </div>
+
     <div class="instuctur-sec">
         <div class="instucture-main">
             <div class="instucture-image">
