dwefefefefef fefefe fefe

--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -288,7 +288,7 @@
 
 
 
-<img src="images/895786_7b4b_2-300x225.jpg" alt="">
+<!-- <img src="images/895786_7b4b_2-300x225.jpg" alt=""> -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="js/slick.js"></script>
