--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -19,7 +19,237 @@
 </head>
 
 <body>
-
+     
+    <div class="courses">
+        <div class="container">
+            <div class="courses-main">
+                <div class="heading">
+                    <h1>Recent courses</h1>
+                </div>
+                <div class="all">
+                    <ul>
+                        <li> <a href="#"> All Categories</a></li>
+                        <li> <a href="#"> Business</a></li>
+                        <li> <a href="#"> Design</a></li>
+                        <li> <a href="#"> Development</a></li>
+                        <li> <a href="#"> IT & Software</a></li>
+                        <li> <a href="#"> Lifestyle</a></li>
+                        <li> <a href="#"> Marketing</a></li>
+                        <li> <a href="#">Office Productivity</a></li>
+                    </ul>
+                </div>
+                <div class="courses-box-main">
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/css.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/jj.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/web.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/desgin.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/art.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/google.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/color.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/get.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/pencil.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/print.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/brush.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="courses-box">
+                        <div class="courses-pic">
+                            <img src="images/flower.jpg" alt="">
+                        </div>
+                        <div class="courses-text">
+                            <span>
+                                Development
+                            </span>
+                            <p>The Complete iOS 10 & Swift 3 <br> Developer Course</p> 
+                            <div class="price">
+                                <ul>
+                                    <li><i class="fa-regular fa-clock"></i></i>30 total hours</li>
+                                    <li> <span>Free</span></li>
+                                </ul>
+                            </div>                         
+                        </div>
+                    </div>
+                    <div class="show-btn">
+                    <button>SHOW ALL</button>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
