--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -26,5 +26,71 @@
     <script src="js/slick.js"></script>
     <script src="js/slick.min.js"></script>
 </body>
+<div class="main-header">
+    <div class="container">
+        <div class="header-top">
+            <div class="logo">
+                <img src="images/logo.png">
+            </div>
+            <div class="menu-togle">
+                <div class="icon">
+             <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+             <div class="togle-bar">
 
+             </div>
+            </div>
+            <div class="search-bar">
+            <input type="text" placeholder="Search courses">
+            <div class="search-icon">
+             <i class="fa fa-search" aria-hidden="true"></i>
+            </div>
+            </div>
+            <div class="stm-icon">
+                <ul>
+                 <li><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Become an Instructor</span></li>
+                 <li><i class="fa fa-briefcase" aria-hidden="true"></i><span>For Enterprise</span></li>
+
+                </ul>
+
+            </div>
+            <div class="login-section">
+                <div class="login">
+                    <ul>
+                     <li><i class="fa-regular fa-user"></i><span>Log in</span></li>
+                    </ul>
+                </div>
+                <div class="sign-up">
+                 <button>Sign up</button>
+                </div>
+                <div class="heart">
+                    <i class="fa-regular fa-heart"></i>
+
+
+                </div>
+
+
+            </div>
+
+        </div>
+        <div class="categories-header">
+            <div class="container">
+                <div class="categories-header-main">
+                <ul>
+                 <li><p><i class="fa-solid fa-chart-simple"></i></p> <span>Business</span></li>
+                 <li><p><i class="fa-solid fa-palette"></i></p> <span>Design</span></li>
+                 <li><p><i class="fa-solid fa-gear"></i></p> <span>Development</span></li>
+                 <li><p><i class="fa-regular fa-face-smile"></i></p> <span>Lifestyle</span></li>
+                 <li><p><i class="fa-solid fa-wallet"></i></p> <span>Office Productivity</span></li>
+                    
+
+                </ul>
+                </div>
+            </div>
+
+        </div>
+    
+    </div>
+
+</div>
 </html>
