--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -20,6 +20,109 @@
 
 <body>
 
+    <section class="footer">
+        <div class="container">
+            <div class="footer-inner">
+                <div class="flex">
+                    <div class="col-4">
+                       <div class="manage">
+                        <div class="text">
+                            <h3>About</h3>
+                        </div>
+                        <div class="paragraph">
+                            <p>"Credit" <a  href="https://wordpress.org/plugins/masterstudy-lms-learning-management-system/">MasterStudy</a> 2023. Sed nec felis pellentesque, lacinia dui sed, ultricies sapien. Pellentesque orci
+                                lectus, consectetur vel, rutrum eu ipsum. Mauris accumsan eros eget libero posuere
+                                vulputate.</p>
+                        </div>
+                       </div>
+                    </div>
+                    <div class="col-4">
+                       <div class="manage">
+                        <div class="text">
+                            <h3>Contact</h3>
+                        </div>
+                        <div class="contact-text">USA, Callifornia 20, First Avenue,<br> Callifornia</div>
+                        <div class="contact">Tel.: +1 212 458 300 32</div>
+                        <div class="contact">Fax: +1 212 375 24 14</div>
+                       </div>
+                    </div>
+                    <div class="col-4">
+                  <div class="manage">
+                    <div class="text">
+                        <h3>Social Network</h3>
+                    </div>
+                    <div class="flex">
+                        <div class="social-network">
+                            <div class="social-media f-bg">
+                                <i class="fa-brands fa-facebook"></i>
+                            </div>
+                        </div>
+                        <div class="social-network">
+                            <div class="social-media insta-bg">
+                                <i class="fa-brands fa-instagram"></i>
+                            </div>
+                        </div>
+                        <div class="social-network">
+                            <div class="social-media link-bg">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </div>
+                        </div>
+                        <div class="social-network">
+                            <div class="social-media pay">
+                                <i class="fa-brands fa-paypal"></i>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="flex">
+                        <div class="social-network">
+                            <div class="social-media twit">
+                                <i class="fa-brands fa-twitter"></i>
+                            </div>
+                        </div>
+                        <div class="social-network">
+                            <div class="social-media drib">
+                                <i class="fa-brands fa-dribbble"></i>
+                            </div>
+                        </div>
+                        <div class="social-network">
+                            <div class="social-media plus">
+                                <i class="fa-brands fa-google-plus"></i>
+                            </div>
+                        </div>
+                        <div class="social-network">
+                            <div class="social-media twit">
+                                <i class="fa-brands fa-skype"></i>
+                            </div>
+                        </div>
+                        
+                    </div>
+                  </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="manage">
+                        <div class="courses">
+                            <img src="images/online-courses.jpg" alt="">
+                           </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer-copyright">
+       <div class="container">
+       <div class="flex">
+        <div class="footer-image">
+           <img src="images/footer-logo.png" alt=""> 
+        </div>
+        <div class="copyright-text">
+            <p>Copyright © 2022. <a href="#">MasterStudy</a> Theme by <a href="">StylemixThemes</a></p>
+        </div>
+       </div>
+       </div>
+    </section>
+
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
