--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -19,7 +19,17 @@
 </head>
 
 <body>
-
+    <section>
+        <div class="banner">
+            <div class="container">
+                    <div class="baner-txt">
+                        <h2>Limitless learning,<br> more possibilities</h2>
+                        <p>Online courses open the opportunity for learning to almost anyone,<br> regardless of their scheduling commitments.</p>
+                        <a href="#"><button>Read More</button></a>
+                    </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
