--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <section>
-        <div class="banner">
+        <div class="banners">
             <div class="container">
                     <div class="baner-txt">
                         <h2>Limitless learning,<br> more possibilities</h2>
