--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -32,6 +32,14 @@
                         <i class="fa fa-bars" aria-hidden="true"></i>
                     </div>
                     <div class="togle-bar">
+                        <ul>
+                            <li>Business</li>
+                            <li>Design</li>
+                            <li>Development</li>
+                            <li>IT & Software</li>
+                            <li> Marketing</li>
+                            <li>Business</li>
+                        </ul>
 
                     </div>
                 </div>
