--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-   
+
 
     <section id="header-section">
         <div class="main-header">
@@ -29,21 +29,20 @@
                     <div class="logo">
                         <img src="images/logo.png">
                     </div>
-                    <div class="togle-bar">
-                        <ul>
-                            <li>Business</li>
-                            <li>Design</li>
-                            <li>Development</li>
-                            <li>IT & Software</li>
-                            <li> Marketing</li>
-                            <li>Business</li>
-                        </ul>
+
                     <div class="menu-togle">
                         <div class="icon">
                             <i class="fa fa-bars" aria-hidden="true"></i>
                         </div>
                         <div class="togle-bar">
-
+                            <ul>
+                                <li>Business</li>
+                                <li>Design</li>
+                                <li>Development</li>
+                                <li>IT & Software</li>
+                                <li> Marketing</li>
+                                <li>Business</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="search-bar">
@@ -54,7 +53,8 @@
                     </div>
                     <div class="stm-icon">
                         <ul>
-                            <li><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Become an Instructor</span></li>
+                            <li><i class="fa fa-bullhorn" aria-hidden="true"></i><span>Become an Instructor</span>
+                            </li>
                             <li><i class="fa fa-briefcase" aria-hidden="true"></i><span>For Enterprise</span></li>
 
                         </ul>
@@ -77,8 +77,8 @@
 
 
                     </div>
-
                 </div>
+
                 <div class="categories-header">
                     <div class="container">
                         <div class="categories-header-main">
@@ -180,11 +180,12 @@
     <section>
         <div class="banners">
             <div class="container">
-                    <div class="baner-txt">
-                        <h2>Limitless learning,<br> more possibilities</h2>
-                        <p>Online courses open the opportunity for learning to almost anyone,<br> regardless of their scheduling commitments.</p>
-                        <a href="#"><button>Read More</button></a>
-                    </div>
+                <div class="baner-txt">
+                    <h2>Limitless learning,<br> more possibilities</h2>
+                    <p>Online courses open the opportunity for learning to almost anyone,<br> regardless of their
+                        scheduling commitments.</p>
+                    <a href="#"><button>Read More</button></a>
+                </div>
             </div>
         </div>
     </section>
@@ -492,7 +493,7 @@
             </div>
         </div>
     </section>
-    
+
 
     <!-- <img src="images/895786_7b4b_2-300x225.jpg" alt=""> -->
     <script src="https://code.jquery.com/jquery-3.7.1.js"
