--- a/project 05-06-24/index.html
+++ b/project 05-06-24/index.html
@@ -703,7 +703,7 @@
                         </div>
                         <div class="col-4">
                             <div class="manage">
-                                <div class="courses">
+                                <div class="udemy">
                                     <img src="images/online-courses.jpg" alt="">
                                 </div>
                             </div>
